Fix sliding on mobile

--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /* --- Base --- */
 
-* {
- outline: 1px solid red;
-}
+/* * { */
+/*  outline: 1px solid red; */
+/* } */
 
 *, *::before, *::after {
   box-sizing: border-box;
@@ -10,7 +10,7 @@
 
 :root {
   --header-height: 3.5rem;
-  --scroll-offset: calc(var(--header-height) - 0.5rem);
+  --scroll-offset: calc(var(--header-height) - 1.5rem);
   --toc-offset: calc(var(--header-height) + 2.75rem);
 }
 
